tests/paczka1/fuzzy1/41012418.err
Error in line 8: A568 S8 65,3
Error in line 10: A568 A605 83,3
Error in line 29: 7cv A531 17,0
Error in line 33: A568 A605 311,0
